--- a/index.html
+++ b/index.html
@@ -6,49 +6,64 @@
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
-<body>
-<div class="violet">
-    <img src="file:///images/Logo.png"/>
-    <div class="logoText">Create your own character armory and let others see your fame!</div>
-</div>
-<div class="basic">
-    <h1>ESO Armory File uploader</h1>
-    <div class="text title">Default file location:</div>
-    <div class="text blue limitTwo">Documents\Elder Scrolls Online\live\SavedVariables\Armory.lua</div>
+<body style="background: url('./images/Background.png') no-repeat center center fixed; background-color: black !important; background-size: cover;">
 
-    <div class="spacer"></div>
-
-    <div class="text title">Currently used file:</div>
-    <div class="text green limitThree" id="usedFile"></div>
-
-    <div class="spacer"></div>
-    <div class="spacer"></div>
-
-    <form id="uploadForm" action="#" method="post" enctype="multipart/form-data">
-        <input type="hidden" name="token" value="" id="appToken"/>
-        <div class="upload">
-            <a id="uploadButton" href="#" class="button greenDisabled" style="float: left;" aria-disabled="true">Upload
-                now</a>
-            <label class="auto" for="autoUpload">
-                <input id="autoUpload" type="checkbox" accept=".lua"> Auto upload
-            </label>
+<div id="title-bar">
+    <div id="topTitle">ESO Armory file uploader</div>
+    <div id="title-bar-btns">
+        <div class="button" id="close-button">
+            <span>&#xE8BB;</span>
         </div>
+    </div>
+</div>
+
+<div class="noTouch">
+    <div class="violet">
+        <img src="./images/Logo.png"/>
+        <div class="logoText">Create your own character armory and let others see your fame!</div>
+    </div>
+    <div class="basic">
+        <h1>ESO Armory File uploader</h1>
+        <div class="text title">Default file location:</div>
+        <div class="text blue limitTwo">Documents\Elder Scrolls Online\live\SavedVariables\Armory.lua</div>
+
         <div class="spacer"></div>
-        <div class="upload">
-            <a href="#" id="my-button" class="button buttonGray">Choose different file</a>
-            <input type="file" name="file" id="my-file" style="display: none;">
+
+        <div class="text title">Currently used auto-upload file:</div>
+        <div class="text green limitThree" id="usedFile"></div>
+
+        <div class="messageWindow" style="display: none;">Nothing going, on nothing going on! I've got a whole lot of
+            nothing!
         </div>
-    </form>
+
+        <div class="spacer"></div>
+        <div class="spacer"></div>
+
+        <form id="uploadForm" action="#" method="post" enctype="multipart/form-data">
+            <input type="hidden" name="token" value="" id="appToken"/>
+            <div class="upload">
+                <a id="uploadButton" href="#" class="button greenDisabled" style="float: left;" aria-disabled="true">Upload
+                    now</a>
+                <label class="auto" for="autoUpload">
+                    <input id="autoUpload" type="checkbox" accept=".lua"> Auto upload
+                </label>
+            </div>
+            <div class="spacer"></div>
+            <div class="upload">
+                <a href="#" id="my-button" class="button buttonGray">Choose different file</a>
+                <input type="file" name="file" id="my-file" style="display: none;">
+            </div>
+        </form>
+    </div>
+    <footer>
+        API Version 100029<br/>
+        Last successful upload 2019-09-23 18:31:32
+    </footer>
 </div>
-<footer>
-    API Version 100029<br/>
-    Last successful upload 2019-09-23 18:31:32
-</footer>
 <script src="./renderer.js"></script>
 <script>window.$ = window.jQuery = require('jquery');</script>
 <script src="./js/scripts.js"></script>
 <script>
-  const {remote} = require('electron');
   $(function () {
     /**
      * Activates upload button
@@ -67,13 +82,10 @@
     const token = remote.getGlobal('sharedObj').token;
     $('#appToken').val(token);
 
-    // Set default file location
+    // Set default file name
     const fileLocation = remote.getGlobal('sharedObj').fileLocation;
-
     if (fileLocation != null) {
-      // activateButton();
       $('#usedFile').text(fileLocation);
-      // $('#my-file').val(fileLocation);
     }
 
     // Set auto-upload
@@ -102,6 +114,46 @@
       activateButton();
     });
 
+    // Simulate click
+    $('#my-button').click(function () {
+      $('#my-file').click();
+    });
+
+    // Submit form
+    $("#uploadButton").on('click', function () {
+      let disabled = $(this).attr('aria-disabled');
+      if (disabled == 'false') {
+        $('#messageWindow').hide();
+        saveFile();
+      }
+    });
+
+    /**
+     * Form submit and file upload function
+     *
+     * @returns {Promise<void>}
+     */
+    async function saveFile() {
+      let that = document.getElementById('my-file');
+      let formData = new FormData();
+      formData.append("file", that.files[0]);
+      formData.append("token", $('#appToken').val());
+      var action = $('#uploadForm').attr('action');
+      let response = await fetch(action, {
+        method: "POST",
+        body: formData
+      });
+      let data = await response.json();
+      if (data.success == 'false') {
+        console.log('FALSE');
+        $('.messageWindow').html('<span class="greenText"">' + data.message + '</span>');
+        $('.messageWindow').show();
+      } else if (data.success == 'true') {
+        console.log('TURE');
+        $('.messageWindow').html('<span class="redText"">' + data.message + '</span>');
+        $('.messageWindow').show();
+      }
+    }
   });
 </script>
 </body>
