Set background image load from website for seasonal changes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       const ipcRenderer = require('electron').ipcRenderer;
     </script>
 </head>
-<body style="background: url('./images/Background.png') no-repeat center center fixed; background-color: black !important; background-size: cover;">
+<body style="background: url('https://www.eso-armory.com/app/Background.png?(new Date()).getTime() => Background.png?1576154416') no-repeat center center fixed; background-color: black !important; background-size: cover;">
 
 <div id="title-bar">
     <div id="topTitle">ESO Armory file uploader</div>
